# IDRec

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/idrec/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Logger.cpp  native-lib.cpp
app/src/main/cpp/include/: Logger.h
app/src/main/cpp/include/opencv2/: imgproc.hpp
app/src/main/java/com/example/idrec/: ImageProcess.java  MainActivity.java  OpenCVActivity.java
app/src/main/res/layout/: activity_main.xml  activity_opencv.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/idrec/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
